# versync

./: Cargo.toml  README.md  justfile  version.toml
src/: config.rs  error.rs  git.rs  lib.rs  main.rs
src/commands/: apply.rs  check.rs  mod.rs  tag.rs
src/format/: json.rs  mod.rs  toml.rs
