[package]
name = "versync"
version = "0.1.0"
edition = "2021"
authors = ["orangekame3"]
description = "Synchronizes version numbers and git tags from a single source of truth"
license = "MIT"
repository = "https://github.com/orangekame3/versync"
keywords = ["version", "sync", "git", "tag"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml_edit = { version = "0.22", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
